--- a/models/staging/_booking__models.yml
+++ b/models/staging/_booking__models.yml
@@ -25,6 +25,10 @@ models:
         data_tests:
           - unique
           - not_null
+      - name: fare_conditions
+        data_tests:
+          - accepted_values:
+              values: ['Economy','Business']
   - name: stg_booking__airports
     columns:
       - name: airport_code
