config dbt project for metrics path

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,5 +35,5 @@ models:
       +materialized: ephemeral      
     marts:
       +materialized: table
-
-
+    metrics:
+      +materialized: table
