--- a/models/marts/_marts__models.yml
+++ b/models/marts/_marts__models.yml
@@ -2,28 +2,87 @@ version: 2
 
 models:
   - name: fct_flights
+    description: Each row represents an event when a flight created
     data_tests:
       - dbt_utils.equal_rowcount:
           compare_model: ref('stg_booking__flights')     
     columns:
       - name: flight_id
+        constraints:
+          - type: primary_key     
+          - type: not_null
         data_tests:
           - unique
           - not_null        
+      - name: is_flight_arrived
+        description: determine whether the flights reach destination
+      - name:  number_of_seats
+        description: number of available seats on the flights
+      - name:  distance_in_miles
+        description: distance between departure and destination airports in miles      
+      - name: flight_cleaning_cost
+        description: cleaning cost per flight, equal number_of_seats * var cleaning_cost_per_seat
+      - name: flight_fuel_cost
+        description: >
+          fuel cost per flight, only applicable to arrived flight,
+          equal distance_in_km * var fuel_cost_per_km
 
   - name: fct_ticket_flights
+    description: >
+      Each row represents an event when a ticket created and assigned to a flight
+      Not all tickets got boarding passes printed, probably because the passengers didn't show up or failed to make it to the flight
+      We assume that the fact that no boarding passes printed won't affect airline revenue, and associated metrics like miles, 
+      flight since passengers won't get any refunds if not showing up 
     data_tests:
       - dbt_utils.equal_rowcount:
           compare_model: ref('stg_booking__ticket_flights')     
     columns:
       - name: ticket_flight_id
+        constraints:
+          - type: primary_key     
+          - type: not_null      
         data_tests:
           - unique
           - not_null   
+      - name: book_flight_id
+        description: foreign key to `dim_booking_flights`
+        data_tests:
+         - relationships:
+              to: ref('dim_booking_flights')
+              field: book_flight_id
+      - name: seat_flight_id
+        description: foreign key to `fct_seat_flights`
+        data_tests:
+         - relationships:
+              to: ref('fct_seat_flights')
+              field: seat_flight_id
+              where: seat_no is not null                    
+      - name: flight_divider
+        description: divider to allocate metrics in `flight_id` level to ticket level  
 
-  - name: dim_booking_flights    
+  - name: dim_booking_flights
+    description: Each row represents information of a booking for a flight. Multiple booking can be made per flight
     columns:
       - name: book_flight_id
+        constraints:
+          - type: primary_key     
+          - type: not_null      
         data_tests:
           - unique
-          - not_null   
+          - not_null  
+      - name: lead_passenger_id
+        description: Defined to be the holder of the first ticket issued for a given booking               
+
+  - name: fct_seat_flights    
+    description: Each row represents information  availability or usage of seats for each flight instance.
+    columns:
+      - name: seat_flight_id
+        constraints:
+          - type: primary_key     
+          - type: not_null      
+        data_tests:
+          - unique
+          - not_null
+      - name: is_seat_taken
+        description: determine whether the seat was taken in specific flight  
+            
