Add marts and metrics models (#6)
* add sources file

* adjust packages + dbt_projects

* fix dbt projects

* draft mart models

* remove marts

* update dbt projects

* add cost variables

* mart models draft

* adjust sources for bookings

* add monthly loyalty statistics

* config dbt project for metrics path

* add weekly seat configuration

* add descriptions and constraints

* improve mart and metrics

* improve marts

* fix

* add pr_to_docs

---------

Co-authored-by: nam-97 <nam.nx@joonsolutions.com>

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -17,6 +17,14 @@ clean-targets:
   - "target"
   - "dbt_packages"
 
+# default variable declaration
+# Full documentation: https://docs.getdbt.com/docs/build/project-variables
+vars:
+  fuel_cost_per_km: 90
+  cleaning_cost_per_seat: 800
+  meal_cost_economy: 1000
+  meal_cost_business: 5000
+
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 models:
@@ -27,5 +35,5 @@ models:
       +materialized: ephemeral      
     marts:
       +materialized: table
-
-
+    metrics:
+      +materialized: table
