--- a/.github/workflows/dbt_prod_run.yml
+++ b/.github/workflows/dbt_prod_run.yml
@@ -9,8 +9,8 @@ on:
 
 env:
   DBT_PROFILES_DIR: ./
-  DBT_BIGQUERY_DATASET_DEV: github_action
   POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+  POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
   DBT_USER: ${{ secrets.DBT_USER }}
   DBT_PASSWORD: ${{ secrets.DBT_PASSWORD }}
 
