--- a/.github/workflows/pr_to_main_dbt.yml
+++ b/.github/workflows/pr_to_main_dbt.yml
@@ -4,6 +4,7 @@ on:
 
 env:
   POSTGRES_HOST: ${{ secrets.POSTGRES_HOST }}
+  POSTGRES_PORT: ${{ secrets.POSTGRES_PORT }}
   DBT_USER: ${{ secrets.DBT_USER }}
   DBT_PASSWORD: ${{ secrets.DBT_PASSWORD }}
 
