--- a/models/staging/google_sheets/_gs__sources.yml
+++ b/models/staging/google_sheets/_gs__sources.yml
@@ -11,7 +11,7 @@ sources:
       data_tests:
         - dbt_utils.unique_combination_of_columns:
             combination_of_columns:
-              - cost_month
+              - month
               - cost_type
               - fare_condition
               - aircraft_code
