--- a/profiles.yml
+++ b/profiles.yml
@@ -6,7 +6,7 @@ airline_dbt:
       host: "{{ env_var('POSTGRES_HOST') }}"
       user: "{{ env_var('DBT_USER') }}"
       password: "{{ env_var('DBT_PASSWORD') }}"
-      port: 10022
+      port: "{{ env_var('POSTGRES_PORT') | int }}"
       dbname: "{{ env_var('DBT_DB', 'airline') }}"
       schema: dev
       threads: 4
