--- a/profiles.yml
+++ b/profiles.yml
@@ -11,3 +11,14 @@ airline_dbt:
       schema: dev
       threads: 4
       connect_timeout: 20
+
+    prod:
+      type: postgres
+      host: "{{ env_var('POSTGRES_HOST') }}"
+      user: "{{ env_var('DBT_USER') }}"
+      password: "{{ env_var('DBT_PASSWORD') }}"
+      port: "{{ env_var('POSTGRES_PORT') | int }}"
+      dbname: "{{ env_var('DBT_DB', 'airline') }}"
+      schema: prod
+      threads: 4
+      connect_timeout: 20
